# kast

./: .gitignore  .gitmodules  .justfile  .ocamlformat  .taplo.toml  CNAME  Cargo.toml  LICENSE  README.md  ROADMAP.md  dune-project  dune-workspace  err  flake.nix  hello.mojo  index.html  kast.cabal  kast.opam  old-rules.ks  output.js  package-lock.json  package.json  pixi.toml  project.ks  repl.html  robots.txt  search_index.en.js  showcase.js  sitemap.xml  workspace.ks
.cargo/: config.toml
.github/workflows/: ci.yaml  ci.yml  pages.yml  test.yaml
app/: Ast.hs  Lexer.hs  Main.hs  MyPrelude.hs  Reader.hs  Syntax.hs  Utils.hs
blog/: index.html
blog/ast/: index.html
checks/: default.nix
checks/ast/: maths.nix
checks/run/: context-shadow.nix  exceptions.nix  failing.nix  fibonacci.nix  generator.nix  guess-a-number.nix  hello.nix  mut.nix  rec-closures.nix  sum-types.nix
crates/ast/: Cargo.toml
crates/ast/src/: group.rs  lexer.rs  lib.rs  peek2.rs  syntax.rs
crates/ast/tests/: syntax.ks  tests.rs
crates/derive-macros/: Cargo.toml
crates/inference/: Cargo.toml
crates/inference/derive/: Cargo.toml
crates/inference/derive/src/: lib.rs
crates/inference/src/: checks.rs  default.rs  global_state.rs  lib.rs
crates/inference/tests/: test.rs
crates/kast/: Cargo.toml
crates/kast-bin/: Cargo.toml
crates/kast-bin/src/: cli.rs  main.rs  repl_helper.rs
crates/kast/src/: cast.rs  comments.rs  lib.rs  rusty.rs  target.rs
crates/kast/src/interpreter/: autocomplete.rs  mod.rs  natives.rs
crates/kast/src/javascript/: mod.rs
crates/kast/src/javascript/contexts/: node.js
crates/kast/src/scopes/: mod.rs  scope.rs
crates/refmap/: Cargo.toml
crates/try-hash/: Cargo.toml
crates/util/: Cargo.toml
crates/util/src/: catch_panic.rs  error.rs  executor.rs  id.rs  lib.rs  pad_adapter.rs  parc.rs  recurse_cache.rs  show_short.rs  source.rs  tuple.rs
examples/: aoc-2015-1.input.txt  aoc-2015-1.ks  ast-nested-scope.ks  big-list.ks  browser.ks  bug.ks  call-future.ks  codegen.ks  context-shadow.ks  context_shadow.ks  contexts.ks  current_scope.ks  custom-syntax.ks  default-number-type.ks  derive.ks  embed.rs  example.ks  exceptions.kast  exceptions.ks  exec-mode.ks  extrapolate.ks  f.ks  fibonacci  fibonacci.kast  fibonacci.ks  fibonacci.md  fn-mod-bug.ks  for-generator.ks  generator.ks  generics.ks  guess-a-number  guess-a-number.kast  guess-a-number.ks  hash_map.ks  hello.kast  hello.ks  import-test.ks  import-zero.ks  inference-bug.ks  is.ks  (+44 more)
examples/asteroids/: index.html  js.ks  main.ks
examples/broken_on_purpose/: doesnt-parse.ks
examples/hkt/: functor.ks  monad.ks  simple.ks
examples/ideas/: derive.ks
examples/leetcode/: 2894.divisible-and-non-divisible-sums-difference.ks  3373.ks  3373.maximize-the-number-of-target-nodes-after-connecting-trees-ii.ks
examples/old/: current_scope.ks  example.ks  generics.ks  import-zero.ks  lots-of-math.ks  macros.ks  mutually-recursive-generic-types.ks  recursive-types.ks  test-interpreter.ks  test.ks  zero.ks
examples/tcp/: tcp-client.ks  tcp-server.ks
examples/untested/: bijection.ks  enumerate.ks  exceptions.ks  for-generator.ks  guess-a-number.ks  inference-bug.ks  late-inferred-context-type.ks  names.ks  simple-context.ks  ternary.ks  throwing_map.ks  transpile-to-javascript.ks  tuples.ks  type-inspect.ks
generated-ocaml/: .gitignore  dune  natives.ml
kast_path/json/: syntax.ks
kast_path/mini/: syntax.ks
kast_path/std/: syntax.ks
lib/: ast.ml  builtinsF.ml  castF.ml  compilerF.ml  dune  id.ml  inference.ml  inferenceF.ml  interpreter.ml  interpreterF.ml  interpreter_old.ml  ir.ml  javascript.ml  javascriptF.ml  kast.ml  lexer.ml  log.ml  modules.ml  prelude.ml  reader.ml  showF.ml  span.ml  stdext.ml  syntax.ml  token.ml  typeIdF.ml  types.ml  util.ml  utilsF.ml
lsp-stress-test/: change.json  init.json  main.py  open.json
ocaml-playground/: Ocaml_playground.ml  dune  new_way.ml  ocaml_bug.ml  ocaml_playground.ml  old_way.ml
playground/: Ocaml_playground.ml  dune  foo.ks  playground.ml  test.ks  test2.ks
src/: ansi.ks  ast.ks  ast.rs  biscope.rs  cast.rs  cli.rs  common.ks  compiler.rs  contexts.rs  display_option.rs  error.ks  error.rs  executor.rs  id.rs  inference.rs  interpreter.rs  ir.rs  javascript.rs  javascript2.rs  json.ks  lexer.ks  lexer.rs  lib.rs  log.ks  main.ks  main.rs  name.rs  output.ks  parser.ks  path.rs  peek2.rs  place.rs  position.ks  reader.ks  repl_helper.rs  rusty.rs  scope.rs  source.ks  source.rs  source_path.ks  (+14 more)
src/ast/: ast.ml  dune  kast_ast.ml
src/cli/: format.ks  highlight.ks  mini.ks  parse.ks  parse_json.ks  parse_syntax_rules.ks  parse_syntax_ruleset.ks  repl.ks  structural_find_and_replace.ks  tokenize.ks
src/compiler/: builtins.rs  compiler.ml  compiler_types.ml  core_syntax.ml  dune  error.ml  init.ml  kast_compiler.ml  mod.rs  prelude.ks  state.ml  types.ml
src/core/: abstract_expr.ml  assignee.ml  binding.ml  compilable.ml  compiler.ml  dune  error.ml  expr.ml  inference.ml  interpreter.ml  kast_core.ml  plugin.ml  print.ml  shaped.ml  ty.ml  value.ml
src/embedded_std/: dune  kast_embedded_std.ml
src/fmt/: dune  kast_fmt.ml  kast_fmt.mli
src/highlight/: dune  kast_highlight.ml
src/inference/: dune  kast_inference.ml
src/interpreter/: builtins.ml  common.ml  dune  error.ml  kast_interpreter.ml  mod.rs  natives.ml  natives.rs  scope.ml  substitute_bindings.ml
src/lsp/: dune  (+11 more)
std/: ast.ks  char.ks  cmp.ks  convert.ks  dbg.ks  fs.ks  io.ks  iter.ks  javascript.ks  lib.kast  lib.ks  net.ks  op.ks  option.ks  path.ks  prelude.ks  random.ks  range.ks  reflection.ks  repr.ks  result.ks  string.ks  syntax.ks  sys.ks  time.ks
test/: dune  test_kast.ml
tests/: context-shadow.nix  examples.rs  exceptions.nix  fibonacci.nix  generator.nix  guess-a-number.nix  hash_map.output  hello.ks  hello.nix  id.nix  import.ks  imported.ks  imported2.ks  lots-of-math.js  lots-of-math.ks  macro-hygiene.ks  mut.nix  rec-closures.nix  result.ks  simple.rs  simple_rules.ks  sum-types.nix  test.json  test.ks  twitch-irc-parse.ks
website/: config.toml
(+323 files in other folders)
