[workspace]
members = ["crates/*"]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/kast-lang/kast"

[workspace.dependencies]
batbox-time = "0.16"
parking_lot = "0.12"
tokio = { version = "1", features = ["sync"] }
spin = "0.10"
clap = { version = "4.5.18", features = ["derive"] }
eyre = "0.6.12"
color-eyre = "0.6.3"
noisy_float = "0.2.0"
rustyline = "14.0.0"
thiserror = "1.0.63"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rand = "0.8.5"
colored = "2.1.0"
futures = "0.3.30"
async-once-cell = "0.5"
async-oneshot = "0.5"
async-notify = "0.3.0"
async-executor = "1.13.1"
async-trait = "0.1.83"
futures-lite = "2"
event-listener = "5"
tempfile = "3"
# https://github.com/rust-random/rand#wasm-support
getrandom = { version = "0.2", features = ["js"] }
ordered-float = { version = "4", features = ["rand"] }
anymap3 = "1.0.1"
linked-hash-map = "0.5"
include_dir = "0.7.4"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"

kast-util = { path = "crates/util" }
kast-ast = { path = "crates/ast" }
derive-macros = { package = "kast-derive-macros", path = "crates/derive-macros" }

decursion = "0.1"
refmap = { package = "kast-refmap", path = "crates/refmap" }
try-hash = { package = "kast-try-hash", path = "crates/try-hash" }

[package]
name = "kast"
version.workspace = true
edition.workspace = true
description = "kast programming language"
license.workspace = true
repository.workspace = true

[profile.release]
debug = true

[features]
default = ["embed-std"]
embed-std = []

[dependencies]
derive-macros.workspace = true
batbox-time.workspace = true
tokio.workspace = true
getrandom.workspace = true
clap.workspace = true
eyre.workspace = true
color-eyre.workspace = true
colored.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
kast-util.workspace = true
kast-ast.workspace = true
thiserror.workspace = true
rand.workspace = true
futures.workspace = true
ordered-float.workspace = true
refmap.workspace = true
async-once-cell.workspace = true
async-notify.workspace = true
async-executor.workspace = true
async-trait.workspace = true
futures-lite.workspace = true
decursion.workspace = true
event-listener.workspace = true
try-hash.workspace = true
async-oneshot.workspace = true
anymap3.workspace = true
inference = { package = "kast-inference", path = "crates/inference" }
include_dir.workspace = true
linked-hash-map.workspace = true
tempfile.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true
wasm-bindgen.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rustyline.workspace = true
