[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/kast-lang/kast"

[workspace.dependencies]
batbox-time = "0.16"
parking_lot = "0.12"
tokio = { version = "1", features = ["sync"] }
spin = "0.10"
clap = { version = "4.5.18", features = ["derive"] }
eyre = "0.6.12"
color-eyre = "0.6.3"
noisy_float = "0.2.0"
rustyline = "14.0.0"
thiserror = "1.0.63"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rand = "0.8.5"
colored = "2.1.0"
futures = "0.3.30"
async-once-cell = "0.5"
async-oneshot = "0.5"
async-notify = "0.3.0"
async-executor = "1.13.1"
async-trait = "0.1.83"
futures-lite = "2"
event-listener = "5"
tempfile = "3"
# https://github.com/rust-random/rand#wasm-support
getrandom = { version = "0.2", features = ["js"] }
ordered-float = { version = "4", features = ["rand"] }
anymap3 = "1.0.1"
linked-hash-map = "0.5"
include_dir = "0.7.4"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
shame-rs = "0.1"

kast-inference.path = "crates/inference"
kast-util.path = "crates/util"
kast-ast.path = "crates/ast"
kast-derive-macros.path = "crates/derive-macros"
kast.path = "crates/kast"
refmap = { package = "kast-refmap", path = "crates/refmap" }
try-hash = { package = "kast-try-hash", path = "crates/try-hash" }

decursion = "0.1"
