[package]
name = "kast-ast"
version.workspace = true
edition.workspace = true
description = "ast parser for kast"
license.workspace = true
repository.workspace = true

[dependencies]
decursion.workspace = true
kast-derive-macros.workspace = true
kast-util.workspace = true
noisy_float.workspace = true
tracing.workspace = true
