[package]
name = "kast-inference"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anymap3.workspace = true
async-oneshot.workspace = true
async-trait.workspace = true
eyre.workspace = true
kast-util.workspace = true
rand.workspace = true
try-hash.workspace = true
