[package]
name = "kast"
description = "kast programming language"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[profile.release]
debug = true

[features]
default = ["embed-std"]
embed-std = []

[dependencies]
kast-derive-macros.workspace = true
batbox-time.workspace = true
tokio.workspace = true
getrandom.workspace = true
eyre.workspace = true
tracing.workspace = true
kast-util.workspace = true
kast-ast.workspace = true
thiserror.workspace = true
rand.workspace = true
futures.workspace = true
ordered-float.workspace = true
async-once-cell.workspace = true
async-executor.workspace = true
async-trait.workspace = true
futures-lite.workspace = true
decursion.workspace = true
event-listener.workspace = true
try-hash.workspace = true
async-oneshot.workspace = true
anymap3.workspace = true
kast-inference.workspace = true
include_dir.workspace = true
linked-hash-map.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true
wasm-bindgen.workspace = true
