[package]
name = "kast"
description = "kast programming language"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[profile.release]
debug = true

[features]
default = ["embed-std"]
embed-std = []

[dependencies]
anymap3.workspace = true
async-executor.workspace = true
async-once-cell.workspace = true
async-oneshot.workspace = true
async-trait.workspace = true
batbox-time.workspace = true
decursion.workspace = true
event-listener.workspace = true
eyre.workspace = true
futures.workspace = true
futures-lite.workspace = true
getrandom.workspace = true
include_dir.workspace = true
kast-ast.workspace = true
kast-derive-macros.workspace = true
kast-inference.workspace = true
kast-util.workspace = true
linked-hash-map.workspace = true
ordered-float.workspace = true
rand.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
try-hash.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true
wasm-bindgen.workspace = true
