[package]
name = "kast-util"
version.workspace = true
edition.workspace = true
description = "Utilities for kast"
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
try-hash.workspace = true
anymap3.workspace = true
async-once-cell.workspace = true
futures.workspace = true
async-executor.workspace = true
eyre.workspace = true
async-oneshot.workspace = true
tracing.workspace = true
