[package]
name = "kast-util"
version.workspace = true
edition.workspace = true
description = "Utilities for kast"
license.workspace = true
repository.workspace = true

[dependencies]
anymap3.workspace = true
async-executor.workspace = true
async-once-cell.workspace = true
async-oneshot.workspace = true
eyre.workspace = true
futures.workspace = true
thiserror.workspace = true
tracing.workspace = true
try-hash.workspace = true
